[package]
name = "block-wise"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
eyre = "0.6"
serde = "1.0.218"
thiserror = "2.0.12"
url = "2.5.4"
serde_json = "1.0.140"
alloy = { version = "0.12", features = ["full"] }
